--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,26 +4,21 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Module</title>
 </head>
 
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <nav><ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul></nav>
-        </div>
+        <nav>
+            <ul>
+                <a href="#search-engine-optimization">Search Engine Optimization</a> 
+                <a href="#online-reputation-management">Online Reputation Management</a>
+                <a href="#social-media-marketing">Social Media Marketing</a>
+            </ul>
+        </nav>
     </div>
+
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -72,10 +67,7 @@
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
-        </p>
+        <!--Made with ❤️️ by Horiseon &copy; 2023 Horiseon Social Solution Services, Inc.-->
     </div>
 </body>
 
