--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </header>
 
     <figure class="hero"></figure>
+
+    <main>
     <article class="content">
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -75,6 +77,7 @@
             </p>
         </section>
     </aside>
+        </main>
     <footer>
         <div class="footer">
             <!--Made with ❤️️ by Horiseon &copy; 2023 Horiseon Social Solution Services, Inc.-->
