--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
-                <a href="#search-engine-optimization">Search Engine Optimization</a>
-                <a href="#online-reputation-management">Online Reputation Management</a>
-                <a href="#social-media-marketing">Social Media Marketing</a>
+               <li><a href="#search-engine-optimization">Search Engine Optimization</a></li> 
+<li><a href="#online-reputation-management">Online Reputation Management</a></li>                
+                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
         </nav>
     </header>
