--- a/index.html
+++ b/index.html
@@ -3,27 +3,36 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Module</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
-    <header>
+    <!--header-->
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <div>
             <ul>
-               <li><a href="#search-engine-optimization">Search Engine Optimization</a></li> 
-<li><a href="#online-reputation-management">Online Reputation Management</a></li>                
-                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
             </ul>
-        </nav>
+        </div>
     </header>
 
-    <figure class="hero"></figure>
+    <!--hero-->
+    <section class="hero"></section>
 
-    <main>
-    <article class="content">
-        <section class="search-engine-optimization">
+    <!--header links-->
+    <main class="content">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -50,8 +59,10 @@
                 increase your lead generation.
             </p>
         </section>
-    </article>
-    <aside class="benefits">
+    </main>
+
+    <!--benefits-->
+    <article class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -70,18 +81,20 @@
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
         </section>
-    </aside>
-        </main>
-    <footer>
-        <div class="footer">
-            <!--Made with ❤️️ by Horiseon &copy; 2023 Horiseon Social Solution Services, Inc.-->
-        </div>
+    </article>
+
+    <!--footer-->
+    <footer class="footer">
+        <h2>Made with ❤️️ by Horiseon</h2>
+        <p>
+            &copy; 2023 Horiseon Social Solution Services, Inc.
+        </p>
     </footer>
 </body>
 
